feat: add ParallelGC with Xmx4g, Xms4g